objects/Demo_Test_object__c.object
<CustomObject>
    <fields>
        <fullName>December__c</fullName>
        <label>December</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FannieMae__c</fullName>
        <label>FannieMae</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_A__c</fullName>
        <label>Field A</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Demo Test object</label>
    <nameField>
        <label>Demo Test object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Test objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>